Change package manager from apt to yum

--- a/DAY-17 (Ansible Part-1)/playbook-var-install.yml
+++ b/DAY-17 (Ansible Part-1)/playbook-var-install.yml
@@ -5,6 +5,6 @@
     currstate: present
   tasks:
     - name: Install HTOP
-      action: apt name=htop state='{{currstate}}'
+      action: yum name=htop state='{{currstate}}'
     - name: Install Git
-      action: apt name=git state='{{currstate}}'
+      action: yum name=git state='{{currstate}}'
